--- a/source/components/entryForm/entryForm.component.html
+++ b/source/components/entryForm/entryForm.component.html
@@ -1,3 +1,7 @@
-<form>
-	<md-input placeholder="Name"></md-input>
+<form (ngSubmit)="add()">
+	<md-input placeholder="Name"
+			  [(ngModel)]="name"
+			  ngControl="name"
+			  required></md-input>
+	<button md-button color="primary" type="submit">Add</button>
 </form>
