--- a/source/app.component.html
+++ b/source/app.component.html
@@ -1,4 +1,4 @@
 <md-toolbar color="primary">
 	Raffle Machine	
 </md-toolbar>
-<rmEntryForm></rmEntryForm>
+<rmEntryForm *ngIf="showForm() | async"></rmEntryForm>
