--- a/source/app.component.html
+++ b/source/app.component.html
@@ -1,4 +1,7 @@
 <md-toolbar color="primary">
 	Raffle Machine	
 </md-toolbar>
-<rmEntryForm *ngIf="showForm() | async"></rmEntryForm>
+<div *ngIf="showForm() | async">
+	<rmEntryForm></rmEntryForm>
+	<button md-raised-button color="accent" (click)="toggle()">Begin raffle</button>
+</div>
