Only show the list only if not empty.

--- a/source/components/entryList/entryList.component.html
+++ b/source/components/entryList/entryList.component.html
@@ -1,4 +1,4 @@
-<md-list>
+<md-list *ngIf="notEmptyList() | async">
 	<md-subheader>Entries</md-subheader>
 	<md-list-item *ngFor="let entry of entryService.entryListChanges | async">
 		{{entry.name}}
