Added the ability to remove entries.

--- a/source/components/entryList/entryList.component.html
+++ b/source/components/entryList/entryList.component.html
@@ -2,5 +2,6 @@
 	<md-subheader>Entries</md-subheader>
 	<md-list-item *ngFor="let entry of entryService.entryListChanges | async">
 		{{entry.name}}
+		<button md-button align="right" (click)="remove(entry)">X</button>
 	</md-list-item>	
 </md-list>
