Added a toastr notification for validation failures. Allow for submit on enter.

--- a/source/components/entryForm/entryForm.component.html
+++ b/source/components/entryForm/entryForm.component.html
@@ -1,7 +1,8 @@
-<form (ngSubmit)="add()">
+<form #form="ngForm">
 	<md-input placeholder="Name"
 			  [(ngModel)]="name"
 			  ngControl="name"
+			  (keydown.enter)="add()"
 			  required></md-input>
-	<button md-button color="primary" type="submit">Add</button>
+	<button md-button color="primary" (click)="add()">Add</button>
 </form>
