Don't show the default notification when the button tries to submit.

--- a/source/components/entryForm/entryForm.component.html
+++ b/source/components/entryForm/entryForm.component.html
@@ -4,5 +4,5 @@
 			  ngControl="name"
 			  (keydown.enter)="add()"
 			  required></md-input>
-	<button md-button color="primary" (click)="add()">Add</button>
+	<button md-button color="primary" type="button" (click)="add()">Add</button>
 </form>
