--- a/source/components/raffle/raffle.component.html
+++ b/source/components/raffle/raffle.component.html
@@ -1,2 +1,2 @@
-<button md-raised-button color="primary">Raffle</button>
-<h4 *ngIf="winner">And the winner is, {{winner.name}}!</h4>
+<button md-raised-button color="primary" (click)="raffle()">Raffle</button>
+<h4 *ngIf="winner | async">And the winner is, {{winnerName() | async}}!</h4>
