Added a button for toggling back to the entry form.

--- a/source/app.component.html
+++ b/source/app.component.html
@@ -7,5 +7,6 @@
 	<button md-raised-button color="accent" (click)="toggle()">Begin raffle</button>
 </div>
 <div *ngIf="showRaffle() | async">
+	<div><button md-button (click)="toggle()">Return to entry</button></div>
 	<rmRaffle></rmRaffle>
 </div>
